working on the authentication form

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+
+.login-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
