--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,10 @@ code {
 }
 
 
-
+.logo{
+    max-width: 100%;
+   height: 200px;
+}
 
 
 
@@ -30,16 +33,7 @@ code {
   transition-timing-function: ease-in-out;
   padding: 0;
   
-  &:focus,
-  &:hover {
-    box-shadow: 1px 4px 5px 1px rgba(0,0,0,0.1);
-  }
-  
-  &:active {
-    background-color: #e5e5e5;
-    box-shadow: none;
-    transition-duration: 10ms;
-  }
+ 
 }
     
 .google-button__icon {
